--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,86 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title{
+  position: absolute;
+  top: 15px;
+  font-size: 45px;
+  color: rgb(109, 98, 255);
+  font-family: 'Roboto', sans-serif;
+  
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.app-container{
+  width: 100vw;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: column;
+  text-align: center;
+  background: url(../src/Assets/images/clouds.jpg) center center / cover no-repeat;
+  
+}
+.form{
+  width: 400px;
+  background: rgba(127, 154, 204, 0.5);
+  border-radius: 4%;
+  min-height: 100px;
+  padding: 50px;
+  margin-top: 15px;
+}
+.input{
+  opacity: 0.9;
+  width: 100%;
+  height: 40px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  font-family: 'Roboto', sans-serif;
+  padding-left: 15px;
+  
+}
+.btn{
+  width: 80%;
+  height: 40px;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  position: relative;
+  top: 300px;
+  font-family: 'Roboto', sans-serif;
+  cursor: pointer;
+}
+.text{
+  font-family: 'Roboto', sans-serif;
+  margin-top: 65px;
+}
+.descr_city{
+  font-size: 50px;
+  margin-top: -10px;
+}
+.descr_temp{
+  font-size: 55px;
+}
+.descr_min_max{
+  font-size: 25px;  
+}
+.descr_hum{
+  margin-top: 15px;
+  font-size: 20px;
+}
+.descr_press{
+  margin-top: 15px;
+  font-size: 20px;
+}
+.err{
+  font-size: 30px;
+  font-family: 'Roboto', sans-serif;
+  margin-top: 15px;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
